# Travel_website

./: .gitignore  README.md
backend/: DEVELOPMENT_SUMMARY.md  README.md  check_data.py  check_nodes.py  check_structure.py  debug_indent.py  pyproject.toml
backend/app/: __init__.py  __main__.py  main.py
backend/app/algorithms/: __init__.py  compression.py  diary_compression.py  diary_ranking.py  diary_search.py  inverted_index.py  media_compression.py  partial_sort.py  shortest_path.py  spatial_index.py  tsp.py
backend/app/api/: __init__.py  deps.py
backend/app/background/: __init__.py
backend/app/core/: __init__.py  app.py  auth.py  config.py  db.py  logging.py  security.py
backend/app/models/: __init__.py  base.py  diaries.py  enums.py  graph.py  locations.py  sessions.py  users.py
backend/app/repositories/: __init__.py  diaries.py  facilities.py  graph.py  regions.py  session.py  users.py
backend/app/schemas/: __init__.py  auth.py  auth_users.py  diary.py  facility.py  map_data.py  recommendation.py  routing.py  search.py  user.py
backend/app/services/: __init__.py  aigc_service.py  auth.py  cache_service.py  diary.py  facility.py  map_data.py  ranking.py  recommendation.py  routing.py  search.py  task_service.py
backend/data/test/: buildings.json  diaries.json  diary_ratings.json  facilities.json  (+4 more)
backend/scripts/: check_api.py  demo_features.py  generate_data.py  init_db.py  init_fts.py  optimize_indexes.py  seed_demo.py  test_fts.py  validate_data.py
backend/tests/: conftest.py  test_health.py
backend/travel_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+84 files in other folders)
